--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,12 @@ flutter:
     - assets/icons/
   #   - images/a_dot_ham.jpeg
 
+
+
+flutter_assets:
+  assets_path: assets/images
+  output_path: lib/core/constants/
+  filename: blog_assets.dart
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
