--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,13 +45,14 @@ dependencies:
   dio: ^5.4.3+1
   smooth_page_indicator: ^1.1.0
   cached_network_image: ^3.3.1
-  flutter_widget_from_html_core: ^0.15.1
+  flutter_widget_from_html_core: ^0.15.2
   awesome_bottom_bar: ^1.2.4
   feather_icons: ^1.2.0
   flutter_screenutil: ^5.9.3
   animation_wrappers: ^3.0.0
   flutter_quill: ^10.1.9
   pretty_dio_logger: ^1.4.0
+  flutter_html: ^3.0.0-beta.2
 
 dev_dependencies:
   flutter_test:
