wip:profile screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   flutter_quill: ^10.1.9
   pretty_dio_logger: ^1.4.0
   flutter_html: ^3.0.0-beta.2
+  flutter_initicon: ^3.0.1
 
 dev_dependencies:
   flutter_test:
